MOBILE-347 Avoid using overflow scrolling in old devices, fixing divs display

--- a/css/layout.css
+++ b/css/layout.css
@@ -20,13 +20,13 @@ body {
 #panel-left {
  left: 0;
  width: 100%;
-
 }
 
 #panel-center {
  left: 100%;
  width: 100%;
  top: 40px;
+ display: none;
 }
 
 #panel-right {
@@ -34,6 +34,7 @@ body {
  width: 100%;
  top: 40px;
  padding-right: 50px;
+ display: none;
 }
 
 #panel-left.animate {
@@ -83,12 +84,14 @@ body {
     #panel-center {
 		left: 0%;  
 		width: 33%;
+		display: block;
     }
 
     #panel-right{
 		left: 33%;
 		width: 67%;
 		padding: 0px;
+		display: block;
     }
 
 	.header-wrapper {
